--- a/Happy Birthday.html
+++ b/Happy Birthday.html
@@ -42,6 +42,7 @@
                         <h2>Happy Birthday <i id="nae">Anjali (MooN) </i></h2>
                         <h2>Have a wonderful day</h2>
                         <h2>Filled with joy and happiness. Be strong After Every sea storm there are good waves.</h2>
+                        <h2>Soon everything will be fine and i want to see you smiling always</h2
                     </div>
                     <span id="typed" style="white-space:pre;">Happy Birthday <i id="nae">Anjali (MooN)</i></span><span class="typed-cursor">|</span>
                 </div>
