--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="col-12  text-center">
-                    <div id="name" class="area">MooN 13 Nov 2022</div>
+                    <div id="name" class="area">MooN13 Nov 2022</div>
                 
                 </div>
 
@@ -41,6 +41,7 @@
                             <h2>Happy Birthday <i id="nae">Anjali The Moon</i></h2>
                             <h2>Have a wonderful day</h2>
                             <h2>Filled with joy and happiness. Be strong After Every sea storm there are good waves.</h2>
+                            <h2>Soon everything will be fine and i want to see you smiling always</h2
                         </div>
                         <span id="typed" style="white-space:pre;"></span>
                     </div>
