--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <h2>Happy Birthday <i id="nae">Anjali The Moon</i></h2>
                             <h2>Have a wonderful day</h2>
                             <h2>Filled with joy and happiness. Be strong After Every sea storm there are good waves.</h2>
-                            <h2>Soon everything will be fine and i want to see you smiling always</h2
+                            <h2>Soon everything will be fine and i want to see you smiling always</h2>
                         </div>
                         <span id="typed" style="white-space:pre;"></span>
                     </div>
